test/extern/require/errorNotAtModuleScope/requireNotAtModuleScope4.good
requireNotAtModuleScope4.chpl:1: error: cannot use 'require' on a Chapel source file not at module scope
