test/extern/require/errorNotAtModuleScope/requireNotAtModuleScope4.chpl
if false then require "dummyFile.chpl"; // should error
